# CodeIsCheap

./: .gitignore  Cargo.toml  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/desktop/e2e/: workbench.spec.ts
apps/desktop/src/: App.test.tsx  App.tsx  CompareView.tsx  SettingsDialog.tsx  accessibility.test.ts  accessibility.ts  compare.test.ts  compare.ts  raw-evidence.test.ts  raw-evidence.ts  styles.css  types.ts  workspace.test.ts  workspace.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/fixtures/: demo-capture.json  demo-prompt-ir.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: beta_metrics.rs  lib.rs  main.rs
apps/desktop/src-tauri/tests/: watchdog_entrypoint.rs
apps/desktop/src/data/: workspace.json
apps/desktop/src/test/: setup.ts
crates/adapters/: Cargo.toml  README.md
crates/adapters/src/: anthropic.rs  anthropic_response.rs  gemini.rs  gemini_response.rs  lib.rs  model.rs  ollama.rs  ollama_response.rs  openai.rs  registry.rs
crates/adapters/tests/: anthropic.rs  capabilities.rs  gemini.rs  ollama.rs  openai.rs
crates/adapters/tests/fixtures/: anthropic-complete-capture.json  anthropic-complete-prompt-ir.json  anthropic-messages-capture.json  anthropic-messages-error-capture.json  anthropic-messages-error-prompt-ir.json  anthropic-messages-json-capture.json  anthropic-messages-json-prompt-ir.json  anthropic-messages-prompt-ir.json  anthropic-messages-sse-capture.json  anthropic-messages-sse-prompt-ir.json  capability-matrix.json  gemini-generate-content-capture.json  gemini-generate-content-prompt-ir.json  gemini-invalid-capture.json  gemini-stream-content-capture.json  gemini-stream-content-prompt-ir.json  ollama-chat-capture.json  ollama-chat-prompt-ir.json  ollama-generate-capture.json  ollama-generate-prompt-ir.json  ollama-invalid-capture.json  openai-chat-capture.json  openai-chat-prompt-ir.json  openai-completions-capture.json  openai-completions-prompt-ir.json  openai-invalid-capture.json  openai-responses-capture.json  openai-responses-prompt-ir.json
crates/capture-ipc/: Cargo.toml
crates/capture-ipc/src/: lib.rs
crates/capture-ipc/tests/: contract.rs
crates/capture-ipc/tests/fixtures/: mitmproxy-request.json
crates/capture-policy/: Cargo.toml
crates/capture-policy/src/: lib.rs
crates/capture-policy/tests/: contract.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: gateway_capture.rs  gateway_outcomes.rs
crates/desktop-api/: Cargo.toml
crates/desktop-api/src/: beta.rs  compatibility.rs  export.rs  lib.rs  profile.rs  update.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: capture.rs  lib.rs
crates/gateway/tests/: capture.rs  performance.rs  streaming.rs
crates/process-attribution/: Cargo.toml
crates/process-attribution/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/process-attribution/tests/: loopback.rs
crates/prompt-ir/: Cargo.toml
crates/prompt-ir/src/: evidence.rs  lib.rs  metrics.rs  model.rs  validation.rs
crates/prompt-ir/tests/: contract.rs
crates/prompt-ir/tests/fixtures/: basic-anthropic.json  basic-openai.json
crates/proxy-recovery/: Cargo.toml  README.md
crates/proxy-recovery/src/: lib.rs  macos.rs  macos_privileged.rs  windows.rs
crates/proxy-recovery/tests/: macos_privileged_helper.rs  recovery.rs  windows_registry.rs
crates/sidecar-runtime/: Cargo.toml
crates/sidecar-runtime/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: key.rs  lib.rs  migrations.rs  model.rs  store.rs
crates/storage/tests/: os_key_store.rs  storage.rs
docs/: architecture.html  beta-evidence.html  capture.html  compatibility.html  decisions.html  delivery.html  development-plan.html  experience.html  incident-response.html  index.html  product.html  progress.html  release.html  security.html  support.html  threat-model.html
docs/assets/: styles.css
docs/spikes/: macos-proxy-recovery.html  mitmproxy-sidecar.html  windows-proxy-recovery.html
policies/: capture-policy.v0.1.json  credential-corpus.v0.1.json  model-pricing.v0.1.json
release/: beta-metrics-policy.v0.1.json  readiness.v0.1.json
release/notes/: v0.1.0.md
schemas/capture-envelope/: v0.1.schema.json
schemas/capture-policy/: v0.1.schema.json
schemas/desktop-api/: v0.1.schema.json
schemas/prompt-ir/: v0.1.schema.json
scripts/: aggregate_beta_metrics.py  inspect_support_bundle.py  prepare_release.py  release_version.py  verify_readiness_evidence.py  verify_release_readiness.py  verify_supply_chain.py
scripts/tests/: test_aggregate_beta_metrics.py  test_documentation.py  test_inspect_support_bundle.py  test_prepare_release.py  test_verify_readiness_evidence.py  test_verify_release_readiness.py  test_verify_supply_chain.py
sidecars/mitmproxy/: README.md  codeischeap_addon.py  entrypoint.py  install_sidecar_bundle.py  package_sidecar.py  verify_packaged_sidecar.py  verify_sidecar_bundle.py
sidecars/mitmproxy/tests/: test_addon.py  test_packaging.py
