[workspace]
members = ["crates/capture-ipc", "crates/gateway", "crates/prompt-ir", "crates/proxy-recovery"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.8"
bytes = "1.10"
futures-util = "0.3"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
url = "2.5"
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
