[workspace]
members = ["crates/adapters", "crates/capture-ipc", "crates/capture-policy", "crates/core", "crates/desktop-api", "crates/gateway", "crates/prompt-ir", "crates/proxy-recovery", "crates/storage"]
exclude = ["apps/desktop/src-tauri"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.8"
bytes = "1.10"
futures-util = "0.3"
getrandom = "0.3"
http = "1.3"
keyring = { version = "3.6.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "stream"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["backup", "bundled-sqlcipher-vendored-openssl"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27"
tokio = { version = "1.45", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
ts-rs = { version = "12.0.1", features = ["serde-json-impl"] }
url = "2.5"
windows-sys = { version = "0.61", features = ["Win32_Networking_WinInet", "Win32_Storage_FileSystem", "Win32_System_Registry"] }
winreg = "0.56"
zeroize = "1.8"
