[package]
name = "codeischeap-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Provider adapter registry and Prompt IR parsers for CodeIsCheap"

[dependencies]
codeischeap-capture-ipc = { path = "../capture-ipc" }
codeischeap-capture-policy = { path = "../capture-policy" }
codeischeap-prompt-ir = { path = "../prompt-ir" }
serde.workspace = true
serde_json.workspace = true
