[package]
name = "codeischeap-capture-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Authenticated local capture IPC contract for CodeIsCheap"

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
