[package]
name = "codeischeap-capture-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Authenticated local capture IPC contract for CodeIsCheap"

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_Threading"] }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
