[package]
name = "codeischeap-desktop-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Versioned desktop command DTOs for CodeIsCheap"

[dependencies]
codeischeap-capture-ipc = { path = "../capture-ipc" }
codeischeap-prompt-ir = { path = "../prompt-ir" }
codeischeap-storage = { path = "../storage" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true

[dev-dependencies]
codeischeap-capture-policy = { path = "../capture-policy" }
tempfile.workspace = true
