[package]
name = "codeischeap-desktop-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Versioned desktop command DTOs for CodeIsCheap"

[dependencies]
codeischeap-capture-ipc = { path = "../capture-ipc" }
codeischeap-capture-policy = { path = "../capture-policy" }
codeischeap-prompt-ir = { path = "../prompt-ir" }
codeischeap-storage = { path = "../storage" }
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ts-rs.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
