[package]
name = "codeischeap-gateway"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Streaming local AI gateway for CodeIsCheap"

[dependencies]
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
url.workspace = true
uuid.workspace = true
