[package]
name = "codeischeap-prompt-ir"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Versioned provider-neutral Prompt IR for CodeIsCheap"

[dependencies]
blake3.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
