[package]
name = "codeischeap-proxy-recovery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Transactional system proxy recovery core for CodeIsCheap"

[dependencies]
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
