[package]
name = "codeischeap-proxy-recovery"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Transactional system proxy recovery core for CodeIsCheap"

[dependencies]
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Threading"] }
winreg.workspace = true

[dev-dependencies]
tempfile.workspace = true
