[package]
name = "codeischeap-sidecar-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Verified sidecar bundle loading and process lifecycle for CodeIsCheap"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
