[package]
name = "codeischeap-sidecar-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Verified sidecar bundle loading and process lifecycle for CodeIsCheap"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
x509-parser.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
tempfile.workspace = true
