[package]
name = "codeischeap-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Encrypted SQLCipher persistence for CodeIsCheap"

[dependencies]
codeischeap-capture-ipc = { path = "../capture-ipc" }
codeischeap-capture-policy = { path = "../capture-policy" }
codeischeap-prompt-ir = { path = "../prompt-ir" }
fs2.workspace = true
getrandom.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[dev-dependencies]
tempfile.workspace = true
