[package]
name = "codeischeap-desktop"
version = "0.1.0"
description = "CodeIsCheap local AI request inspector"
authors = ["CodeIsCheap contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "codeischeap_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
codeischeap-adapters = { path = "../../../crates/adapters" }
codeischeap-capture-ipc = { path = "../../../crates/capture-ipc" }
codeischeap-capture-policy = { path = "../../../crates/capture-policy" }
codeischeap-core = { path = "../../../crates/core" }
codeischeap-desktop-api = { path = "../../../crates/desktop-api" }
codeischeap-gateway = { path = "../../../crates/gateway" }
codeischeap-proxy-recovery = { path = "../../../crates/proxy-recovery" }
codeischeap-sidecar-runtime = { path = "../../../crates/sidecar-runtime" }
codeischeap-storage = { path = "../../../crates/storage" }
getrandom = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.45", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.27"
